@@ -14,6 +14,9 @@ the 3dmod Preferences dialog, accessed via the <B>Edit-Options</B> menu entry.
 <LI>The <B>up</B> and <B>down arrows</B> step the zoom factor up or down.
 <LI>The <B>zoom</B> edit box shows the current zoom factor and allows 
 one to type in a custom zoom.
+<LI>The <B>size</B> indicator shows the current window size, or the window
+pixels enclosed by the rubberband if it is on.  This is the size of image that
+will be produced when taking a snapshot.
 <LI>The <B>checkerboard</B> button toggles between fast rendering and 
 slower but higher quality interpolated image rendering.
 <LI>The <B>lock</B> button can lock the Zap window at the current Z value.
@@ -27,6 +30,8 @@ the current point comes near an edge (the default).
 <LI>The <B>modeling direction</B> button toggles between inserting new 
 points after the current point (when pointing up) or before 
 the current point (when pointing down).
+<LI>The <B>rubber band</B> button turns the rubber band on or off (see
+<B>B</B> hot key below).
 <LI>The <B>Z slider</B> allows one to riffle through images or select a 
 particular section to display.
 <LI>The <B>section</B> edit box shows the current section and allows one 
